--- a/main.html
+++ b/main.html
@@ -14,21 +14,23 @@
             <img class="equilibrium-img" src="images/image-equilibrium.jpg" alt="NFT Equilibrium Image">
         </div>
     
-        <div class="nft-card__content">
+        <div class="nft-card__content mg-t1">
             <h1>Equilibrium #3429</h1>
-            <p class="nft-details">Our Equilibrium collection promotes balance and calm.</p>
+            <p class="nft-details mg-t1">Our Equilibrium collection promotes balance and calm.</p>
 
-            <div class="nft-card__bidding-details">
+            <div class="nft-card__bidding-details mg-t1">
                 <div class="eth-pricing">
                     <img src="images/icon-ethereum.svg" alt="Ethereum Icon">
                     <p><span>0.041 ETH</span></p>
                 </div>
-                <p>3 days left</p>
+                <p class="bidding-time" aria-hidden="true">3 days left</p>
             </div>
 
-            <div class="nft-card__creator">
+            <hr>
+
+            <div class="nft-card__creator mg-t2">
                 <img src="images/image-avatar.png" alt="Jules Wyvern | Equilibrium Creator">
-                <p><span>Creation of</span>Jules Wyvern</p>
+                <p>Creation of <span>Jules Wyvern</span></p>
             </div>
 
         </div>
