--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
     <title>NFT Preview Card</title>
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="desktop.css">
 </head>
 
 <body>
